@@ -52,7 +52,11 @@ templates/: added _like-form.html for liking message
 
 messages/show.html and user.show.html: Added includes _like-form.html to show the like button everywhere a message can be seen
 
+app.py 461: added variable to capture url path
 
+forms.py 87: added a hidden property for the url
+
+_like-form.html 5-6: added a line to set the value of url property to the request.path and set it before the csrf token
 
 
 
